--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "version": "1.0.0",
-    "name": "wappcode/gqlpdss-surveys",
+    "name": "wappcode/gql-pdss-surveys",
     "description": "Modulo para administar cuestionarios",
     "type": "library",
     "license": "MIT",
@@ -12,5 +12,10 @@
     "require": {
         "wappcode/flow-utilities": "^1.0",
         "wappcode/gqlpdss": "^2.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AppModule\\": "dev/modules/AppModule/src/"
+        }
     }
 }
