Se actualizo la librería gqlpdss. Se hicieron cambios en nombres de columnas para compatibilidad con diferentes bases de datos. Se actualizo el sql para inicializar datos en la base de datos

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,21 @@
 {
-    "version": "1.0.8",
-    "name": "wappcode/gql-pdss-surveys",
-    "description": "Modulo para administar cuestionarios",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "GPDSurvey\\": "GPDSurvey/src/"
-        }
-    },
-    "require": {
-        "wappcode/flow-utilities": "^1.0",
-        "wappcode/gqlpdss": "^2.0"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "AppModule\\": "dev/modules/AppModule/src/"
-        }
+  "version": "1.0.8",
+  "name": "wappcode/gql-pdss-surveys",
+  "description": "Modulo para administar cuestionarios",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "GPDSurvey\\": "GPDSurvey/src/"
     }
+  },
+  "require": {
+    "wappcode/flow-utilities": "^1.0",
+    "wappcode/gqlpdss": "dev-master"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "AppModule\\": "dev/modules/AppModule/src/"
+    }
+  }
 }
